--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,8 @@ body {
     background-color: #d9dcd6;
 }
 
+/* Header */
+
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -41,6 +43,7 @@ header nav ul li {
     margin-left: 25px;
 }
 
+
 a {
     color: #ffffff;
     text-decoration: none;
@@ -49,6 +52,8 @@ a {
 p {
     font-size: 16px;
 }
+
+/* Background Image */
 
 .hero {
     height: 800px;
@@ -69,7 +74,7 @@ p {
     margin-left: 25px;
 }
 
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
