alt for benefits imgs and css compiled

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@ header nav ul li {
     margin-left: 25px;
 }
 
+/* Text*/
 
 a {
     color: #ffffff;
@@ -64,6 +65,8 @@ p {
     background-position: center;
 }
 
+/* Main Body */
+
 .float-left {
     float: left;
     margin-right: 25px;
@@ -80,6 +83,8 @@ main {
     margin-left: 20px;
 }
 
+/* Benefit Section */
+
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -91,55 +96,23 @@ main {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-/* Services Offered Modules */
+/* Services Section */
 
 .services {
     margin-bottom: 20px;
@@ -159,6 +132,8 @@ main {
     margin-bottom: 20px;
     font-size: 36px;
 }
+
+/* Footer */
 
 .footer {
     padding: 30px;
